<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Spot Smile</string>
    <string name="spot_board_title">Spot happy faces. You have : %s</string>
    <string name="spot_board_result">Great! You spotted %s happy faces.</string>
    <string name="spot_button_start">START</string>
    <string name="spot_button_restart">RETRY</string>
    <string name="spot_button_review">RECORD</string>
    <string name="my_image_text">ADD HAPPY FACES</string>
    <string name="my_image_text_not_support">SORRY, ADD FACE NOT SUPPORTED</string>
    <string name="my_image_camera">From camera</string>
    <string name="my_image_gallery">From gallery</string>
    <string name="my_image_manage">My Smile Faces</string>
    <string name="dialog_my_image_edit">EDIT</string>
    <string name="dialog_my_image_quit">QUIT</string>
    <string name="dialog_my_image_remove">Remove</string>
    <string name="ad_id" translatable="false">ca-app-pub-2401109721185515/8026014980</string>

    <string-array name="month_list">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

</resources>
